--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
   },
   "homepage": "https://github.com/kai-commits/ts-discord-bot#readme",
   "dependencies": {
+    "@discordjs/rest": "^0.3.0",
+    "@discordjs/voice": "^0.8.0",
+    "bufferutil": "^4.0.6",
+    "discord-api-types": "^0.31.0",
+    "discord.js": "^13.6.0",
     "env-var": "^7.1.1",
+    "erlpack": "github:discord/erlpack",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
-    "winston": "^3.7.2"
+    "utf-8-validate": "^5.0.9",
+    "winston": "^3.7.2",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
