--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "node -r ts-node/register -r tsconfig-paths/register dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,27 +20,23 @@
   },
   "homepage": "https://github.com/kai-commits/ts-discord-bot#readme",
   "dependencies": {
-    "@discordjs/rest": "^0.3.0",
-    "@discordjs/voice": "^0.8.0",
-    "bufferutil": "^4.0.6",
-    "discord-api-types": "^0.31.0",
-    "discord.js": "^13.6.0",
-    "env-var": "^7.1.1",
-    "erlpack": "github:discord/erlpack",
+    "@discordjs/rest": "0.3.0",
+    "discord-api-types": "0.30.0",
+    "discord.js": "13.6.0",
+    "discord.js-rate-limiter": "1.3.2",
+    "express": "4.17.3",
+    "express-promise-router": "4.1.1",
     "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.1",
-    "utf-8-validate": "^5.0.9",
-    "winston": "^3.7.2",
-    "zlib-sync": "^0.1.7"
+    "winston": "^3.7.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/express": "4.17.13",
     "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "eslint": "^8.12.0",
-    "jest": "^27.5.1",
-    "ts-jest": "^27.1.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-unicorn": "^42.0.0",
     "typescript": "^4.6.3"
   }
 }
