--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node -r ts-node/register -r tsconfig-paths/register dist/index.js"
+    "start": "export $(cat .env.local | xargs) && node -r ts-node/register -r tsconfig-paths/register dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,10 @@
   "homepage": "https://github.com/kai-commits/ts-discord-bot#readme",
   "dependencies": {
     "@discordjs/rest": "0.3.0",
-    "discord-api-types": "0.30.0",
-    "discord.js": "13.6.0",
+    "discord-api-types": "^0.31.1-next.bc6e97f.1649094949",
+    "discord.js": "^14.0.0-dev.1649160496-402514f",
     "discord.js-rate-limiter": "1.3.2",
+    "env-var": "^7.1.1",
     "express": "4.17.3",
     "express-promise-router": "4.1.1",
     "ts-node": "^10.7.0",
@@ -37,6 +38,6 @@
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-unicorn": "^42.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.5.4"
   }
 }
