--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "export $(cat .env.local | xargs) && node -r ts-node/register -r tsconfig-paths/register dist/index.js"
+    "start": "export $(cat .env.local | xargs) && node -r ts-node/register -r tsconfig-paths/register dist/index.js",
+    "dev": "nodemon --config nodemon.json src/index.ts",
+    "dev:debug": "nodemon --config nodemon.json --inspect-brk src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,6 @@
     "env-var": "^7.1.1",
     "express": "4.17.3",
     "express-promise-router": "4.1.1",
-    "ts-node": "^10.7.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
@@ -38,6 +39,8 @@
     "eslint": "^8.12.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-unicorn": "^42.0.0",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.7.0",
     "typescript": "^4.5.4"
   }
 }
